more java progress

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 
     <!-- THIRD PAGE: THE DECISION AND RESTAURANT LOCATIONS -->
     <div class="container rounded" id="userResult" style="display: none;">
+        <h1 id="decisionMade">
+            
+        </h1>
         <div class="row">
             <div class="col-sm-6">
                 <div id="user-result-body">
