--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
         </div>
     </div>
 
+    <div class="container rounded" id="coinFlip" style="display: none;">
+        <div id="coin">
+            <div class="side-a"></div>
+            <div class="side-b"></div>
+        </div>
+    </div>
+
+
     <!-- THIRD PAGE: THE DECISION AND RESTAURANT LOCATIONS -->
     <div class="container rounded" id="userResult" style="display: none;">
         <h1 id="decisionMade">
