added a couple styles

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
 
     <!-- THIRD PAGE: THE DECISION AND RESTAURANT LOCATIONS -->
     <div class="container rounded" id="userResult" style="display: none;">
-        <h1 id="decisionMade">
+        <!-- <h1 id="decisionMade">
 
-        </h1>
+        </h1> -->
         <div class="row">
             <div class="col-sm-6">
                 <div id="user-result-body">
                     <label for="formGroupExampleInput2">
-                        <p>Your food choice is:</p>
+                        <p id="decisionMade"></p>
                         <!-- The span below will display the user's final assigned pick: -->
                         <p>
                             <span id="final-food-choice"> </span>
